--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,23 +4,46 @@ Versions
 
   Next Release
   {
+
+  }
+  
+  v5r3-pre1
+  {
+   
     # BUGFIX: I added the Joel modification into the release.
     #The command line has to show the fill number only for runs.
     #The run information has to be show all the streams.
     # NEW: I return the runs which are processed or not processed with a given date.
     BookkeepingSystem = bk_2010041501
-    #BUGFIX: DiracProduction.py - Minor change to fix command line production file summaries.
-    #BUGFIX: DataRecoveryAgent.py - Protect against case where prod job has no WMS ID assigned and improved print statements.
-    ProductionManagementSystem = pm_2010042601
-    #BUGFIX: TestApplications.py - Fix for preserving stdout in case of failure as reported by Vladimir.
-    #CHANGE: SoftwareInstallation.py - Force flush of stdout and protect against exceptions during redirection.
-    SAMSystem = sa_2010041902
+    
+    ConfigurationSystem = cs_2010030501 
+    
     #NEW: ProductionOptions.py - Make Brunel print a line per 100 events instead of every event by default.
     #BUGFIX: ProductionEnvironment.py - Stop exception for case where shared area does not exist.     
     Core = co_2010042301
-    #NEW: DiracLHCb.py - BK query methods now accept data quality flags with appropriate checking.
-    Interfaces = if_2010042101        
     
+    DataManagementSystem = dm_2010031101
+    
+    #NEW: DiracLHCb.py - BK query methods now accept data quality flags with appropriate checking.
+    Interfaces = if_2010042101  
+     
+    #BUGFIX: DiracProduction.py - Minor change to fix command line production file summaries.
+    #BUGFIX: DataRecoveryAgent.py - Protect against case where prod job has no WMS ID assigned and improved print statements.
+    ProductionManagementSystem = pm_2010042601
+    
+    # CHANGE: GaudiApplication - CORAL workaround moved to ProductionEnvironment module
+    Workflow = wo_2010040701
+    
+    ResourceStatusSystem = rs_2010020701
+    
+    #BUGFIX: TestApplications.py - Fix for preserving stdout in case of failure as reported by Vladimir.
+    #CHANGE: SoftwareInstallation.py - Force flush of stdout and protect against exceptions during redirection.
+    SAMSystem = sa_2010041902
+    
+    WorkloadManagementSystem = wm_2010012001
+    #BUGFIX: DiracProduction.py - Minor change to fix command line production file summaries.
+    ProductionManagementSystem = pm_2010041501
+
   }
   
   v5r2p8
