I capitalize the configuration version.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@24398 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,8 @@ Versions
 
   Next Release
   {
-
+    # NEW: I capitalize the configuration version.
+    BookkeepingSystem = bk_2010042601 
   }
   
   v5r3-pre1
