git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@24456 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,8 +4,9 @@ Versions
 
   Next Release
   {
+    # BUGFIX: I added the missing parameters to the methods, because the bkk web interface was broken.
     # NEW: I capitalize the configuration version.
-    BookkeepingSystem = bk_2010042601 
+    BookkeepingSystem = bk_2010042701 
   }
   
   v5r3-pre1
