--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -21,6 +21,26 @@ Versions
     Interfaces = if_2010042801
   }
   
+  v5r3p1
+  {
+   
+    BookkeepingSystem = bk_2010042702    
+    ConfigurationSystem = cs_2010030501 
+    Core = co_2010042701   
+    DataManagementSystem = dm_2010031101
+    Interfaces = if_2010042101  
+    ProductionManagementSystem = pm_2010042601
+    
+    # NEW: Don't declare a job as stalled if 'DISABLE_WATCHDOG_CPU_WALLCLOCK_CHECK' 
+    #      exists on the local file system.  
+    Workflow = wo_2010050301
+    
+    ResourceStatusSystem = rs_2010020701
+    SAMSystem = sa_2010041902    
+    WorkloadManagementSystem = wm_2010012001
+
+  }
+  
   v5r3
   {
    
