git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@24733 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,9 +4,10 @@ Versions
 
   Next Release
   {
+    #NEW I added a new attribute to the jobs table and GUI.
     #CHANGE I suggest a file name when the users save the selected data set.
     #BUGFIX I force the users to select a site name when they are using the Advanced save. 
-    BookkeepingSystem = bk_2010050501
+    BookkeepingSystem = bk_2010050502
     
     #CHANGE: ProductionData.py - Support for DebugLFNs for all productions and some tidying.
     #NEW: ProductionLogAnalysis.py - Module to perform LHCb specific log file analysis in a standalone way.
