--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,6 +4,9 @@ Versions
 
   Next Release
   {
+    #BUGFIX to the AtomicRun plugin
+    ProductionManagementSystem = pm_2010050601
+ 
     #NEW I added a new attribute to the jobs table and GUI.
     #CHANGE I suggest a file name when the users save the selected data set.
     #BUGFIX I force the users to select a site name when they are using the Advanced save. 
