--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -15,20 +15,21 @@ Versions
     #CHANGE: ProductionData.py - Support for DebugLFNs for all productions and some tidying.
     #NEW: ProductionLogAnalysis.py - Module to perform LHCb specific log file analysis in a standalone way.
     #NEW: dirac-lhcb-analyse-log-file - New script to do the log file analysis from the command line.
-    Core = co_2010042801
+    Core = co_2010050701
 
     #CHANGE: All workflow modules: Ensure the *commons dictionaries are printed only once at verbose level for a step.
     #NEW: AnalyseLogFile.py - Completely reworked AnalyseLogFile, removed deprecated and non-functioning code, streamlined log analysis into a separate utility.
     #BUGFIX: GaudiApplication.py - Removed default setting of some Gauss options for user jobs.
-    Workflow = wo_2010042801
+    #CHANGE: Added WNCPUHS06 parameter to BK report module
+    Workflow = wo_2010050701
 
     #BUGFIX:  TestApplications.py - Fix for long term issue of sandbox stdout becoming lost in extreme cases.
     SAMSystem = sa_2010042801
 
     #CHANGE: Production.py - Updated the list of plugins that trigger inclusion of BK streaming file types for associated transformation.
-    Interfaces = if_2010042801
+    Interfaces = if_2010050701
   }
-  
+
   v5r3p1
   {
    
