--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,30 +4,49 @@ Versions
 
   Next Release
   {
-    #BUGFIX to the AtomicRun plugin
-    ProductionManagementSystem = pm_2010050601
- 
+
+  }
+  
+  v5r4-pre1
+  {
+   
     #NEW I added a new attribute to the jobs table and GUI.
     #CHANGE I suggest a file name when the users save the selected data set.
     #BUGFIX I force the users to select a site name when they are using the Advanced save. 
     BookkeepingSystem = bk_2010050502
     
+    ConfigurationSystem = cs_2010030501 
+    
     #CHANGE: ProductionData.py - Support for DebugLFNs for all productions and some tidying.
     #NEW: ProductionLogAnalysis.py - Module to perform LHCb specific log file analysis in a standalone way.
     #NEW: dirac-lhcb-analyse-log-file - New script to do the log file analysis from the command line.
     Core = co_2010050701
-
+      
+    # CHANGE: dirac-lhcb-gridify-castor-file - use CERN-ARCHIVE rather than CERN-RAW for retrieving file.
+    DataManagementSystem = dm_2010050701
+    
+    #CHANGE: Production.py - Updated the list of plugins that trigger inclusion of BK streaming file types for associated transformation.
+    Interfaces = if_2010050701
+     
+    #BUGFIX: in the AtomicRun plugin
+    ProductionManagementSystem = pm_2010050601
+    
     #CHANGE: All workflow modules: Ensure the *commons dictionaries are printed only once at verbose level for a step.
-    #NEW: AnalyseLogFile.py - Completely reworked AnalyseLogFile, removed deprecated and non-functioning code, streamlined log analysis into a separate utility.
+    #NEW: AnalyseLogFile.py - Completely reworked AnalyseLogFile, removed deprecated and non-functioning code, 
+    #     streamlined log analysis into a separate utility.
     #BUGFIX: GaudiApplication.py - Removed default setting of some Gauss options for user jobs.
     #CHANGE: Added WNCPUHS06 parameter to BK report module
     Workflow = wo_2010050701
-
+    
+    # NEW: GridSiteWMSMonitoringAgent - added ConfigTemplate.cfg
+    # CHANGE: Added option to specify site URL template
+    ResourceStatusSystem = rs_2010050701
+    
     #BUGFIX:  TestApplications.py - Fix for long term issue of sandbox stdout becoming lost in extreme cases.
     SAMSystem = sa_2010042801
+    
+    WorkloadManagementSystem = wm_2010012001
 
-    #CHANGE: Production.py - Updated the list of plugins that trigger inclusion of BK streaming file types for associated transformation.
-    Interfaces = if_2010050701
   }
 
   v5r3p1
