--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -29,7 +29,9 @@ Versions
     Interfaces = if_2010050701
      
     #BUGFIX: in the AtomicRun plugin
-    ProductionManagementSystem = pm_2010050601
+    #CHANGE: DataRecoveryAgent - now has an enable flag and a removal flag. Default is only to update input 
+    #        files without descendent files for the transformation.  Problematic cases are printed for investigation.
+    ProductionManagementSystem = pm_2010050701
     
     #CHANGE: All workflow modules: Ensure the *commons dictionaries are printed only once at verbose level for a step.
     #NEW: AnalyseLogFile.py - Completely reworked AnalyseLogFile, removed deprecated and non-functioning code, 
