--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,8 @@ Versions
 
   Next Release
   {
-
+    #CHANGEI changed the EventInputStat calculation. 
+I   #BUGFIX I fixed the FullStat, EventInputStat in the GUI.
   }
   
   v5r4-pre1
