git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@24988 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,8 +4,10 @@ Versions
 
   Next Release
   {
+    #NEW: I implemented the getAllDescendes method
     #CHANGEI changed the EventInputStat calculation. 
 I   #BUGFIX I fixed the FullStat, EventInputStat in the GUI.
+    BookkeepingSystem = bk_2010051001
   }
   
   v5r4-pre1
