--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -6,8 +6,14 @@ Versions
   {
     #NEW: I implemented the getAllDescendes method
     #CHANGEI changed the EventInputStat calculation. 
-I   #BUGFIX I fixed the FullStat, EventInputStat in the GUI.
+    #BUGFIX I fixed the FullStat, EventInputStat in the GUI.
     BookkeepingSystem = bk_2010051001
+    
+    #CHANGE: DiracProduction.py - support Completing status for CLI
+    Interfaces = if_2010051001
+    
+    #CHANGE: DataRecovery agent changes to use latest BK methods and now recognizes Completing status
+    ProductionManagementSystem = pm_2010051001        
   }
   
   v5r4-pre1
