--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -13,7 +13,10 @@ Versions
     Interfaces = if_2010051001
     
     #CHANGE: DataRecovery agent changes to use latest BK methods and now recognizes Completing status
-    ProductionManagementSystem = pm_2010051001        
+    ProductionManagementSystem = pm_2010051001
+    
+    #NEW: UploadOutputData.py - made change to publish BK replica flags with failover after *all* files uploaded
+    Workflow = wo_2010050701
   }
   
   v5r4-pre1
