--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,22 +4,59 @@ Versions
 
   Next Release
   {
+            
+  }
+  
+  v5r4-pre2
+  {
+   
+    #NEW I added a new attribute to the jobs table and GUI.
+    #CHANGE I suggest a file name when the users save the selected data set.
+    #BUGFIX I force the users to select a site name when they are using the Advanced save. 
     #NEW: I implemented the getAllDescendes method
     #CHANGEI changed the EventInputStat calculation. 
     #BUGFIX I fixed the FullStat, EventInputStat in the GUI.
     BookkeepingSystem = bk_2010051001
     
+    ConfigurationSystem = cs_2010030501 
+    
+    #CHANGE: ProductionData.py - Support for DebugLFNs for all productions and some tidying.
+    #NEW: ProductionLogAnalysis.py - Module to perform LHCb specific log file analysis in a standalone way.
+    #NEW: dirac-lhcb-analyse-log-file - New script to do the log file analysis from the command line.
+    Core = co_2010050701
+      
+    # CHANGE: dirac-lhcb-gridify-castor-file - use CERN-ARCHIVE rather than CERN-RAW for retrieving file.
+    DataManagementSystem = dm_2010050701
+    
+    #CHANGE: Production.py - Updated the list of plugins that trigger inclusion of BK streaming file types for associated transformation.
     #CHANGE: DiracProduction.py - support Completing status for CLI
     Interfaces = if_2010051001
-    
+     
+    #BUGFIX: in the AtomicRun plugin
+    #CHANGE: DataRecoveryAgent - now has an enable flag and a removal flag. Default is only to update input 
+    #        files without descendent files for the transformation.  Problematic cases are printed for investigation.
     #CHANGE: DataRecovery agent changes to use latest BK methods and now recognizes Completing status
     ProductionManagementSystem = pm_2010051001
     
+    #CHANGE: All workflow modules: Ensure the *commons dictionaries are printed only once at verbose level for a step.
+    #NEW: AnalyseLogFile.py - Completely reworked AnalyseLogFile, removed deprecated and non-functioning code, 
+    #     streamlined log analysis into a separate utility.
+    #BUGFIX: GaudiApplication.py - Removed default setting of some Gauss options for user jobs.
+    #CHANGE: Added WNCPUHS06 parameter to BK report module
     #NEW: UploadOutputData.py - made change to publish BK replica flags with failover after *all* files uploaded
     Workflow = wo_2010051001
+    
+    # NEW: GridSiteWMSMonitoringAgent - added ConfigTemplate.cfg
+    # CHANGE: Added option to specify site URL template
+    ResourceStatusSystem = rs_2010050701
+    
+    #BUGFIX:  TestApplications.py - Fix for long term issue of sandbox stdout becoming lost in extreme cases.
+    SAMSystem = sa_2010042801
+    
+    WorkloadManagementSystem = wm_2010012001
   }
   
-  v5r4-pre1
+    v5r4-pre1
   {
    
     #NEW I added a new attribute to the jobs table and GUI.
