Added  subsystem tags for supporting SDST workflows.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@25062 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,6 +4,15 @@ Versions
 
   Next Release
   {
+
+  #NEW: GaudiAppplication.py - support discovery of streamed files for SDST as input type
+  Workflow = wo_2010051101
+  
+  #NEW: ProductionOptions.py - Support SDST output type for Brunel
+  Core = co_2010051101
+  
+  #NEW: Production.py - Add support for SDST steps for Brunel and DaVinci
+  Interfaces = if_2010051101
             
   }
   
