git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@25068 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -13,7 +13,9 @@ Versions
   
   #NEW: Production.py - Add support for SDST steps for Brunel and DaVinci
   Interfaces = if_2010051101
-            
+  
+  #CHANGE: I added the StartRun and EndRun parameters to getFileWithGivenDataset.
+  BookkeepingSystem = bk_2010051101      
   }
   
   v5r4-pre2
