LHCbDIRAC/Workflow/wo_2010051102
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@25074 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -6,7 +6,8 @@ Versions
   {
 
   #NEW: GaudiAppplication.py - support discovery of streamed files for SDST as input type
-  Workflow = wo_2010051101
+  #NEW: UploadOutputData.py - For all productions with input data added a check prior to upload to look for any BK descendents with replica flags for the current transformation.  In this case the jobs will fail meaningfully but will not upload output data. 
+  Workflow = wo_2010051102
   
   #NEW: ProductionOptions.py - Support SDST output type for Brunel
   Core = co_2010051101
