git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@25191 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,8 @@ Versions
 
   Next Release
   {
-         
+     #CHANGE: I incressed the bkk client time limit from 120 to 600.
+     BookkeepingSystem = bk_2010051201   
   }
   
   v5r4
