--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,8 +4,24 @@ Versions
 
   Next Release
   {
-     #CHANGE: I incressed the bkk client time limit from 120 to 600.
-     BookkeepingSystem = bk_2010051201   
+  
+  }
+  
+  v5r4p1
+  {
+   
+    #CHANGE: I incressed the bkk client time limit from 120 to 600.
+    BookkeepingSystem = bk_2010051201     
+    
+    ConfigurationSystem = cs_2010030501 
+    Core = co_2010051101
+    DataManagementSystem = dm_2010050701
+    Interfaces = if_2010051101
+    ProductionManagementSystem = pm_2010051001
+    Workflow = wo_2010051102
+    ResourceStatusSystem = rs_2010050701
+    SAMSystem = sa_2010042801  
+    WorkloadManagementSystem = wm_2010012001
   }
   
   v5r4
