git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@25246 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -6,6 +6,8 @@ Versions
   {
     #CHANGE: use CPUScalingReferenceSI00 in SiteQueues to  check if this value is published
     SAMSystem = sa_2010051801
+    #BUGFIX: The getfileswithagivendataset should return all the files which have the starRun and endRun run number
+    BookkeepingSystem = bk_2010051801
   }
 
   v5r4p1
