git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@25312 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -7,8 +7,10 @@ Versions
     #CHANGE: use CPUScalingReferenceSI00 in SiteQueues to  check if this value is published
     #CHANGE: change 140000 to 270000 to reflect new cputime limit in correct units
     SAMSystem = sa_2010051901
+    
     #BUGFIX: The getfileswithagivendataset should return all the files which have the starRun and endRun run number
-    BookkeepingSystem = bk_2010051801
+    #CHANGE: I changed the insertTag method: I allow to insert same tag name with different value. The tags are sorted by inserted time stamp.
+    BookkeepingSystem = bk_2010052001
   }
 
   v5r4p1
