LHCbDIRAC/Interfaces/if_2010052101
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@25331 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -11,6 +11,13 @@ Versions
     #BUGFIX: The getfileswithagivendataset should return all the files which have the starRun and endRun run number
     #CHANGE: I changed the insertTag method: I allow to insert same tag name with different value. The tags are sorted by inserted time stamp.
     BookkeepingSystem = bk_2010052001
+    
+    
+    #CHANGE: ProductionOptions.py - Updates for Moore - the only project that doesn't allow to set DB tags with LHCbApp().
+    #CHANGE: ProductionLogAnalysis.py - Updates for Moore - logging output had changed since the last usage in production.
+    Core = co_2010051901
+    #CHANGE: Production.py - Updates to support usage of Moore in simulation production workflows.
+    Interfaces = if_2010052101    
   }
 
   v5r4p1
