--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,20 +4,36 @@ Versions
 
   Next Release
   {
-    #CHANGE: use CPUScalingReferenceSI00 in SiteQueues to  check if this value is published
-    #CHANGE: change 140000 to 270000 to reflect new cputime limit in correct units
-    SAMSystem = sa_2010051901
-    
+  
+  }
+  
+  v5r5-pre1
+  {
+
     #BUGFIX: The getfileswithagivendataset should return all the files which have the starRun and endRun run number
     #CHANGE: I changed the insertTag method: I allow to insert same tag name with different value. The tags are sorted by inserted time stamp.
     BookkeepingSystem = bk_2010052001
-    
+
+    ConfigurationSystem = cs_2010030501
     
     #CHANGE: ProductionOptions.py - Updates for Moore - the only project that doesn't allow to set DB tags with LHCbApp().
     #CHANGE: ProductionLogAnalysis.py - Updates for Moore - logging output had changed since the last usage in production.
     Core = co_2010051901
+    
+    DataManagementSystem = dm_2010050701
+    
     #CHANGE: Production.py - Updates to support usage of Moore in simulation production workflows.
-    Interfaces = if_2010052101    
+    Interfaces = if_2010052101   
+    
+    ProductionManagementSystem = pm_2010051001
+    Workflow = wo_2010051102
+    ResourceStatusSystem = rs_2010050701
+    
+    #CHANGE: use CPUScalingReferenceSI00 in SiteQueues to  check if this value is published
+    #CHANGE: change 140000 to 270000 to reflect new cputime limit in correct units
+    SAMSystem = sa_2010051901
+    
+    WorkloadManagementSystem = wm_2010012001
   }
 
   v5r4p1
