--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -27,7 +27,9 @@ Versions
     
     ProductionManagementSystem = pm_2010051001
     Workflow = wo_2010051102
-    ResourceStatusSystem = rs_2010050701
+    
+    # BUGFIX: minor fix in GridSiteWMSMonitoring agent
+    ResourceStatusSystem = rs_2010052401
     
     #CHANGE: use CPUScalingReferenceSI00 in SiteQueues to  check if this value is published
     #CHANGE: change 140000 to 270000 to reflect new cputime limit in correct units
