--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,20 @@ Versions
 
   Next Release
   {
-  
+    # CHANGE: ProductionRequestDB to present the % complete of Parent request differently 
+    # NEW: Added setBookkeepingQueryEndRunForTransformation (TransformationDB.py, TransformationHandler.py) to allow setting EndRun for BKQuery
+    # NEW: Created TransformationRuns table (TransformationDB.sql) mapping Transformations to Runs with status
+    # NEW: Added setTransformationRunsSite (TransformationDB.py,TransformationHandler.py) for setting the assigned site in TransformationRuns table
+    # NEW: Added getTransformationRuns (TransformationDB.py,TransformationHandler.py) for monitoring the TransformationRuns table
+    # NEW: Added getTransformationRunStats (TransformationDB.py,TransformationHandler.py) for getting the files statuses for Trans/Run combos
+    # NEW: ADded getTransformationRunsSummaryWeb (TransformationHandler.py) for Web monitoring of TransformationRuns
+    # CHANGE: Updated the RAWShares plugin to use the TransformationRuns table
+    # NEW: Add RunNumber to TransformationFiles (TransformationDB.py, TransformationDB.sql)
+    # NEW: Added addTransformationRunFiles (TransformationDB.py,TransformationHandler.py) for assigning TransformationFiles a RunNumber
+    # NEW: BookkeepingWatchAgent updated to populate RunNumbers to TransformationFiles table
+    # NEW: Add RunNumber to TransformationTasks (TransformationDB.py, TransformationDB.sql)
+    # NEW: Added addTaskForTransformation so that RunNumber can be added to TransformationTasks when job created
+    ProductionManagementSystem = pm_2010052601
   }
   
   v5r5-pre1
