--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -18,6 +18,9 @@ Versions
     # NEW: Add RunNumber to TransformationTasks (TransformationDB.py, TransformationDB.sql)
     # NEW: Added addTaskForTransformation so that RunNumber can be added to TransformationTasks when job created
     ProductionManagementSystem = pm_2010052601
+    
+    # NEW: I return the runs which are started before end date and it is finished out of end date. 
+    BookkeepingSystem = bk_2010052601
   }
   
   v5r5-pre1
