git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@25385 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -19,8 +19,9 @@ Versions
     # NEW: Added addTaskForTransformation so that RunNumber can be added to TransformationTasks when job created
     ProductionManagementSystem = pm_2010052601
     
-    # NEW: I return the runs which are started before end date and it is finished out of end date. 
-    BookkeepingSystem = bk_2010052601
+    # NEW: I return the runs which are started before end date and it is finished out of end date.
+    # NEW: I added the run start and end time stamp to the getRunInformation method and the command line method too. 
+    BookkeepingSystem = bk_2010052602
   }
   
   v5r5-pre1
