--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,6 +4,30 @@ Versions
 
   Next Release
   {
+    
+  }
+  
+  v5r5-pre1
+  {
+
+    # BUGFIX: The getfileswithagivendataset should return all the files which have the starRun and endRun run number
+    # CHANGE: I changed the insertTag method: I allow to insert same tag name with different value. The tags are sorted by inserted time stamp.
+    # NEW: I return the runs which are started before end date and it is finished out of end date.
+    # NEW: I added the run start and end time stamp to the getRunInformation method and the command line method too. 
+    BookkeepingSystem = bk_2010052602
+
+    # NEW: UsersAndGroups agent - added mail notifications
+    ConfigurationSystem = cs_2010052601
+    
+    #CHANGE: ProductionOptions.py - Updates for Moore - the only project that doesn't allow to set DB tags with LHCbApp().
+    #CHANGE: ProductionLogAnalysis.py - Updates for Moore - logging output had changed since the last usage in production.
+    Core = co_2010051901
+    
+    DataManagementSystem = dm_2010050701
+    
+    #CHANGE: Production.py - Updates to support usage of Moore in simulation production workflows.
+    Interfaces = if_2010052101   
+    
     # CHANGE: ProductionRequestDB to present the % complete of Parent request differently 
     # NEW: Added setBookkeepingQueryEndRunForTransformation (TransformationDB.py, TransformationHandler.py) to allow setting EndRun for BKQuery
     # NEW: Created TransformationRuns table (TransformationDB.sql) mapping Transformations to Runs with status
@@ -19,31 +43,12 @@ Versions
     # NEW: Added addTaskForTransformation so that RunNumber can be added to TransformationTasks when job created
     ProductionManagementSystem = pm_2010052601
     
-    # NEW: I return the runs which are started before end date and it is finished out of end date.
-    # NEW: I added the run start and end time stamp to the getRunInformation method and the command line method too. 
-    BookkeepingSystem = bk_2010052602
-  }
-  
-  v5r5-pre1
-  {
-
-    #BUGFIX: The getfileswithagivendataset should return all the files which have the starRun and endRun run number
-    #CHANGE: I changed the insertTag method: I allow to insert same tag name with different value. The tags are sorted by inserted time stamp.
-    BookkeepingSystem = bk_2010052001
-
-    ConfigurationSystem = cs_2010030501
-    
-    #CHANGE: ProductionOptions.py - Updates for Moore - the only project that doesn't allow to set DB tags with LHCbApp().
-    #CHANGE: ProductionLogAnalysis.py - Updates for Moore - logging output had changed since the last usage in production.
-    Core = co_2010051901
-    
-    DataManagementSystem = dm_2010050701
-    
-    #CHANGE: Production.py - Updates to support usage of Moore in simulation production workflows.
-    Interfaces = if_2010052101   
-    
-    ProductionManagementSystem = pm_2010051001
-    Workflow = wo_2010051102
+    # NEW: GaudiApplication - add SDST to list of input types to trigger the special case of streaming (was previously only DST).
+    # NEW: UploadOutputData - For all productions with input data added a check prior to upload to look for any BK descendents with 
+    #                         replica flags for the current transformation;
+    #                         Modified to perform BK registration for successfully uploaded files (with failover) after all are uploaded 
+    #                         and registered in the LFC
+    Workflow = wo_2010052601
     
     # BUGFIX: minor fix in GridSiteWMSMonitoring agent
     ResourceStatusSystem = rs_2010052401
