git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@25470 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -6,6 +6,10 @@ Versions
   {
     #CHANGE: change error in warning for SoftwareReport
     SAMSystem = sa_2010052701
+    
+    # CHANGE: The Bkk manager didn't insert the jobstart and jobend second, this modification add the second the current Jobend and jobstart time stamp .
+    BookkeepingSystem = bk_2010052801
+    
 
   }
 
