--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,13 +4,63 @@ Versions
 
   Next Release
   {
+     
+  }
+
+  v5r5-pre2
+  {
+
+    # BUGFIX: The getfileswithagivendataset should return all the files which have the starRun and endRun run number
+    # CHANGE: I changed the insertTag method: I allow to insert same tag name with different value. The tags are sorted by inserted time stamp.
+    # NEW: I return the runs which are started before end date and it is finished out of end date.
+    # NEW: I added the run start and end time stamp to the getRunInformation method and the command line method too.
+    # CHANGE: The Bkk manager didn't insert the jobstart and jobend second, this modification add the second the 
+    #         current Jobend and jobstart time stamp .
+    BookkeepingSystem = bk_2010052801
+
+    # NEW: UsersAndGroups agent - added mail notifications
+    ConfigurationSystem = cs_2010052601
+
+    #CHANGE: ProductionOptions.py - Updates for Moore - the only project that doesn't allow to set DB tags with LHCbApp().
+    #CHANGE: ProductionLogAnalysis.py - Updates for Moore - logging output had changed since the last usage in production.
+    Core = co_2010051901
+
+    DataManagementSystem = dm_2010050701
+
+    #CHANGE: Production.py - Updates to support usage of Moore in simulation production workflows.
+    Interfaces = if_2010052101
+
+    # CHANGE: ProductionRequestDB to present the % complete of Parent request differently
+    # NEW: Added setBookkeepingQueryEndRunForTransformation (TransformationDB.py, TransformationHandler.py) to allow setting EndRun for BKQuery
+    # NEW: Created TransformationRuns table (TransformationDB.sql) mapping Transformations to Runs with status
+    # NEW: Added setTransformationRunsSite (TransformationDB.py,TransformationHandler.py) for setting the assigned site in TransformationRuns table
+    # NEW: Added getTransformationRuns (TransformationDB.py,TransformationHandler.py) for monitoring the TransformationRuns table
+    # NEW: Added getTransformationRunStats (TransformationDB.py,TransformationHandler.py) for getting the files statuses for Trans/Run combos
+    # NEW: ADded getTransformationRunsSummaryWeb (TransformationHandler.py) for Web monitoring of TransformationRuns
+    # CHANGE: Updated the RAWShares plugin to use the TransformationRuns table
+    # NEW: Add RunNumber to TransformationFiles (TransformationDB.py, TransformationDB.sql)
+    # NEW: Added addTransformationRunFiles (TransformationDB.py,TransformationHandler.py) for assigning TransformationFiles a RunNumber
+    # NEW: BookkeepingWatchAgent updated to populate RunNumbers to TransformationFiles table
+    # NEW: Add RunNumber to TransformationTasks (TransformationDB.py, TransformationDB.sql)
+    # NEW: Added addTaskForTransformation so that RunNumber can be added to TransformationTasks when job created
+    ProductionManagementSystem = pm_2010052601
+
+    # NEW: GaudiApplication - add SDST to list of input types to trigger the special case of streaming (was previously only DST).
+    # NEW: UploadOutputData - For all productions with input data added a check prior to upload to look for any BK descendents with
+    #                         replica flags for the current transformation;
+    #                         Modified to perform BK registration for successfully uploaded files (with failover) after all are uploaded
+    #                         and registered in the LFC
+    Workflow = wo_2010052601
+
+    # BUGFIX: minor fix in GridSiteWMSMonitoring agent
+    ResourceStatusSystem = rs_2010052401
+
+    #CHANGE: use CPUScalingReferenceSI00 in SiteQueues to  check if this value is published
+    #CHANGE: change 140000 to 270000 to reflect new cputime limit in correct units
     #CHANGE: change error in warning for SoftwareReport
     SAMSystem = sa_2010052701
-    
-    # CHANGE: The Bkk manager didn't insert the jobstart and jobend second, this modification add the second the current Jobend and jobstart time stamp .
-    BookkeepingSystem = bk_2010052801
-    
 
+    WorkloadManagementSystem = wm_2010012001
   }
 
   v5r5-pre1
