git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@25525 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,8 @@ Versions
 
   Next Release
   {
-     
+    # BUGFIX: I check the EventStat value; if it is None, I will not use it.
+    BookkeepingSystem = bk_2010053101
   }
 
   v5r5-pre2
