Updates to support merging with DaVinci.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@25533 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -6,6 +6,16 @@ Versions
   {
     # BUGFIX: I check the EventStat value; if it is None, I will not use it.
     BookkeepingSystem = bk_2010053101
+    
+    # CHANGE: BookkeepingReport.py - Ensure that statistics parameter for file records is a string (zero was an int previously).
+    Workflow = wo_2010053101
+    
+    # NEW: ProductionLogAnalysis.py - Updated to check for InputCopyStream for events output in DaVinci log files for the case of merging. 
+    # NEW: ProductionOptions.py - Now support merging with DaVinci.
+    Core = co_2010053101
+    
+    # NEW: Production.py - Support DaVinci merging and setc workflow steps. 
+    Interfaces = if_2010053101    
   }
 
   v5r5-pre2
