LHCbDIRAC/Workflow/wo_2010053102
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@25537 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -8,7 +8,8 @@ Versions
     BookkeepingSystem = bk_2010053101
     
     # CHANGE: BookkeepingReport.py - Ensure that statistics parameter for file records is a string (zero was an int previously).
-    Workflow = wo_2010053101
+    # CHANGE: GaudiApplication.py - Add piping of "Reading Event record" lines to stdout (change of convention).
+    Workflow = wo_2010053102
     
     # NEW: ProductionLogAnalysis.py - Updated to check for InputCopyStream for events output in DaVinci log files for the case of merging. 
     # NEW: ProductionOptions.py - Now support merging with DaVinci.
