git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@25542 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,8 +4,9 @@ Versions
 
   Next Release
   {
+    # BUGFIX: The data quality value was a string before. It is a list or tuple now. The user can select data by using different quality flags.
     # BUGFIX: I check the EventStat value; if it is None, I will not use it.
-    BookkeepingSystem = bk_2010053101
+    BookkeepingSystem = bk_2010053102
     
     # CHANGE: BookkeepingReport.py - Ensure that statistics parameter for file records is a string (zero was an int previously).
     # CHANGE: GaudiApplication.py - Add piping of "Reading Event record" lines to stdout (change of convention).
