LHCbDIRAC/Interfaces/if_2010060101
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@25627 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,8 @@ Versions
 
   Next Release
   {
-   
+    # NEW: DiracLHCb.py - Added several new BK query methods to be used in Ganga.     
+    Interfaces = if_2010060101  
   }
   
    v5r5-pre3
