Safe for the next release whenever it occurs.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@25860 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -5,6 +5,14 @@ Versions
   Next Release
   {
 
+
+    # CHANGE: UserJobFinalization.py - As in production now disable Watchdog checks during upload of output data.
+    Workflow = wo_2010060301
+
+    # CHANGE: Production.py - Set the request ID for threaded production monitoring view.
+    # NEW: DiracLHCb.py - Added getDataByRun() method for Ganga.
+    Interfaces = if_2010060301 
+
   }
   
    v5r5
