--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,12 @@ Versions
 
   Next Release
   {
-
+	# CHANGE: Reshuffle CombinedSoftwareInstallation so that we use the SharedArea
+	# CHANGE: TARSoft: don't redownload the applications if they are already there. Had to do some 
+	# tricks to manage slic folder name
+	# TODO: what about LCSIM
+	Core = 
+	
     # CHANGE: UserJobFinalization.py - As in production now disable Watchdog checks during upload of output data.
     Workflow = wo_2010060301
 
