--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -11,7 +11,10 @@ Versions
     # CHANGE: Production.py - Set the request ID for threaded production monitoring view.
     # NEW: DiracLHCb.py - Added getDataByRun() method for Ganga.
     Interfaces = if_2010060302
-
+    
+    # NEW: The getFilesWithGivenDatasets return the files which correspond to a list of runs.
+    # BUGFIX: The getDescendents was broken when one of the files have no replica flag. I just ignore the file which have no replica flag. 
+    BookkeepingSystem = bk_2010060401
   }
   
    v5r5
