--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -14,6 +14,24 @@ Versions
     BookkeepingSystem = bk_2010060401
   }
   
+  v5r5p2
+  {
+
+    BookkeepingSystem = bk_2010053102
+    ConfigurationSystem = cs_2010052601
+    Core = co_2010053101
+    DataManagementSystem = dm_2010050701
+    Interfaces = if_2010060101 
+    ProductionManagementSystem = pm_2010060101
+    
+    # NEW: added STREAM_Merging_run template
+    Workflow = wo_2010060701
+    
+    ResourceStatusSystem = rs_2010052401
+    SAMSystem = sa_2010052701
+    WorkloadManagementSystem = wm_2010012001
+  }
+  
   v5r5p1
   {
 
