git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@26019 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -9,9 +9,10 @@ Versions
     # NEW: DiracLHCb.py - Added getDataByRun() method for Ganga.
     Interfaces = if_2010060302
     
-    # NEW: The getFilesWithGivenDatasets return the files which correspond to a list of runs.
-    # BUGFIX: The getDescendents was broken when one of the files have no replica flag. I just ignore the file which have no replica flag. 
-    BookkeepingSystem = bk_2010060401
+    # NEW: The getFilesWithGivenDatasets return the files which correspond to a list of runs. 
+    # NEW: The Gui allows the users to select files with different quality flags.
+    # BUGFIX: The getDescendents was broken when one of the files have no replica flag. I just ignore the file which have no replica flag.
+    BookkeepingSystem = bk_2010060901
   }
   
   v5r5p2
