git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@26037 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,6 +4,8 @@ Versions
 
   Next Release
   {
+    # CHANGE: Moved LHCb-specific Policy directory from DIRAC/ResourceStatusSystem
+    ResourceStatusSystem = rs_2010061001
 
     # CHANGE: Production.py - Set the request ID for threaded production monitoring view.
     # NEW: DiracLHCb.py - Added getDataByRun() method for Ganga.
