--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -11,10 +11,12 @@ Versions
     # NEW: DiracLHCb.py - Added getDataByRun() method for Ganga.
     Interfaces = if_2010060302
     
+    # NEW: You can set visible or invisible productions in the GUI. 
+    # NEW: A new command line implemented which returns the ancestors.
     # NEW: The getFilesWithGivenDatasets return the files which correspond to a list of runs. 
     # NEW: The Gui allows the users to select files with different quality flags.
     # BUGFIX: The getDescendents was broken when one of the files have no replica flag. I just ignore the file which have no replica flag.
-    BookkeepingSystem = bk_2010060901
+    BookkeepingSystem = bk_2010061101
   }
   
   v5r5p2
